Adds submit endpoint
